<resources>
    <string name="app_name">MultiTimer</string>
    <string name="timer_title">Timer name...</string>
    <string name="hours">HH</string>
    <string name="minutes">MM</string>
    <string name="seconds">SS</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
    <string name="button_stop">Stop</string>
</resources>
