<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.addisondalton.multitimer.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2">
        <!-- TOP ROW-->
        <LinearLayout
            android:id="@+id/linearLayoutTL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="26dp"
            android:padding="4dp"
            android:layout_row="0"
            android:background="@color/timerNotStarted"
            android:orientation="vertical">

            <EditText
                android:id="@+id/timerNameTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timer_title"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hoursTL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/hours"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/minutesTL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/minutes"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/secondsTL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/seconds"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/timerStartTL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="0"
                android:text="@string/button_start" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="26dp"
            android:padding="4dp"
            android:layout_row="0"
            android:background="@color/timerNotStarted"
            android:orientation="vertical">

            <EditText
                android:id="@+id/timerNameTR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timer_title"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hoursTR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/hours"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/minutesTR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/minutes"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/secondsTR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@drawable/edit_text_selector"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/seconds"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/timerStartTR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="1"
                android:text="@string/button_start" />
        </LinearLayout>
        <!-- MID ROW-->
        <LinearLayout
            android:id="@+id/linearLayoutML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:layout_row="1"
            android:background="@color/timerNotStarted"
            android:orientation="vertical">

            <EditText
                android:id="@+id/timerNameML"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timer_title"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hoursML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/hours"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/minutesML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/minutes"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/secondsML"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/seconds"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/timerStartML"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="2"
                android:text="@string/button_start" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:layout_row="1"
            android:background="@color/timerNotStarted"
            android:orientation="vertical">

            <EditText
                android:id="@+id/timerNameMR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timer_title"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hoursMR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/hours"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/minutesMR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/minutes"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/secondsMR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/seconds"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/timerStartMR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="3"
                android:text="@string/button_start" />
        </LinearLayout>
        <!--BOTTOM ROW-->
        <LinearLayout
            android:id="@+id/linearLayoutBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:layout_row="2"
            android:background="@color/timerNotStarted"
            android:orientation="vertical">

            <EditText
                android:id="@+id/timerNameBL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timer_title"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hoursBL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/hours"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/minutesBL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/minutes"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/secondsBL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/seconds"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/timerStartBL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="4"
                android:text="@string/button_start" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:layout_row="2"
            android:background="@color/timerNotStarted"
            android:orientation="vertical">

            <EditText
                android:id="@+id/timerNameBR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/timer_title"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/hoursBR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/hours"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/minutesBR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/minutes"
                    android:inputType="time" />

                <EditText
                    android:id="@+id/secondsBR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@drawable/edit_text_selector"
                    android:ems="10"
                    android:hint="@string/seconds"
                    android:inputType="time" />
            </LinearLayout>

            <Button
                android:id="@+id/timerStartBR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:tag="5"
                android:text="@string/button_start" />
        </LinearLayout>
    </GridLayout>
</ScrollView>
